# basic_iterative_solvers

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  common.hpp  config.mk  kernels.hpp  main.cpp  mmio.hpp  postprocessing.hpp  preprocessing.hpp  smax_helpers.hpp  solver.hpp  solver_harness.hpp  sparse_matrix.hpp  utilities.hpp
benchmarks/: Makefile  bench_harness.hpp  bench_macros.hpp  kernel_benchmarks.hpp  mkl_benchmarks.hpp  run_benchmarks.cpp  timing.h  validate.hpp
cmake/: CPM.cmake  fastmmio.cmake
figs/: HPCG_CG_test.txt
methods/: bicgstab.hpp  cg.hpp  gauss_seidel.hpp  gmres.hpp  ilu.hpp  jacobi.hpp  richardson.hpp
tests/: test_framework.hpp  test_kernels.cpp  test_main.cpp  test_solvers.cpp  test_utilities.cpp
utilities/: LU_factors.hpp  mmio.cpp  mmio.hpp  smax_helpers.hpp  utilities.hpp
